# Fraudulent-Transactions-Classifier

./: .gitignore  Makefile  README.md  pyproject.toml
src/fraudclf/: data_fetcher.py
src/utils/: common.py
